# fc41d-pikascript

./: .gitignore  README.md  pinmap.xlsx
ql_application/pikascript/: FC41D.pyi  app_main.c  example.py  main.py  pika_config.c  pika_config.h  requestment.txt
ql_application/quectel_demo/: CMakeLists.txt  demo_main.c  ql_adc_demo.c  ql_api_common.h  (+19 more)
ql_build/: CMakeLists.txt  bk7231n_bsp.lds  bk7231n_bsp_ohos.lds  bk7231n_ohos.lds  build.sh  config.cmake  toolchain_bk7231n.cmake
ql_kernel/driver/: CMakeLists.txt
ql_kernel/driver/ble/: ble.c  ble.h
ql_kernel/driver/ble/beken_ble_sdk/mesh/include/: mesh_defines.h
ql_kernel/driver/ble/plactform/arch/: BK3435_reg.h
ql_kernel/driver/ble/plactform/driver/ble_icu/: ble_icu.c  ble_icu.h
ql_kernel/driver/ble/plactform/driver/uart/: ble_uart.c  ble_uart.h
ql_kernel/driver/ble/plactform/modules/rf/src/: ble_rf_xvr.c
ql_kernel/driver/ble/profiles/comm/api/: comm_task.h
ql_kernel/driver/ble_5_x_rw/: ble_5_x_rw.mk
ql_kernel/driver/ble_5_x_rw/ble_lib/ip/ble/ll/api/: em_map_ble.h
ql_kernel/driver/ble_5_x_rw/ble_lib/ip/em/api/: em_map.h
ql_kernel/driver/ble_5_x_rw/ble_lib/ip/sch/api/: sch_arb.h
ql_kernel/driver/ble_5_x_rw/ble_pub/app/api/: app_ble_init.h  app_comm.h  app_sdp.h
ql_kernel/driver/ble_5_x_rw/ble_pub/profiles/comm/api/: comm_task.h
ql_kernel/driver/ble_5_x_rw/ble_pub/profiles/sdp/api/: sdp_comm.h  sdp_comm_pub.h  sdp_comm_task.h
ql_kernel/driver/ble_5_x_rw/ble_pub/ui/: ble_ui.h
ql_kernel/driver/ble_5_x_rw/platform/7231n/config/: rwip_config.h
ql_kernel/driver/ble_5_x_rw/platform/7231n/entry/: ble.h
ql_kernel/driver/ble_5_x_rw/platform/7231n/rwip/api/: rwip.h
ql_kernel/driver/entry/: boot_handlers_liteos.S
ql_kernel/driver/flash/: flash.h
ql_kernel/driver/gpio/: gpio.h
ql_kernel/driver/i2c/: i2c2.h  i2c_pub.h
ql_kernel/driver/include/: arm_mcu_pub.h  bk_timer_pub.h  ble_api.h  ble_api_5_x.h  calendar_pub.h  flash_pub.h  gpio_pub.h  i2s_pub.h  intc_pub.h  saradc_pub.h  spi_pub.h  sys_ctrl_pub.h  uart_pub.h
ql_kernel/driver/intc/: intc.h
ql_kernel/driver/phy/: phy_trident.h
ql_kernel/driver/pwm/: bk_timer.h  pwm_bk7231n.h  pwm_mutex.h
ql_kernel/driver/saradc/: saradc.h
ql_kernel/driver/sdcard/: sdcard.c
ql_kernel/driver/spi/: spi.c  spi_bk7231n.h  spi_flash.h  spi_master.c  spi_slave.c  spi_slave_bk7271.c
ql_kernel/driver/sys_ctrl/: sys_ctrl.h
ql_kernel/driver/uart/: uart.h
ql_kernel/func/: CMakeLists.txt
ql_kernel/func/airkiss/: airkiss_main.h
ql_kernel/func/at_server/: README.md  at_server.c  at_server.h  at_svr_opts.h  atsvr_unite.h
ql_kernel/func/at_server/_at_server/: _at_server.h  _at_server_port.c  _at_server_port.h  _at_svr_opts.h
ql_kernel/func/at_server/_at_server_port/: atsvr_core.c  atsvr_core.h  atsvr_port.c  atsvr_port.h
ql_kernel/func/at_server/at_server_func/: _atsvr_func.h
ql_kernel/func/at_server/atsvr_cmd/: atsvr_cmd.c  atsvr_cmd.h  atsvr_cmd_cfg.h  atsvr_misc.c  atsvr_misc.h  atsvr_wlan.c  atsvr_wlan.h
ql_kernel/func/bk7011_cal/: SConscript  bk7011_cal.mk  bk7231N_cal.h  bk_cal_pub.h  chip_support.h
ql_kernel/func/ble_wifi_exchange/: ble_wifi_port.h
ql_kernel/func/camera_intf/: camera_intf.h  camera_intf_pub.h
ql_kernel/func/force_sleep/: force_ps_pub.h
ql_kernel/func/include/: bk7011_cal_pub.h  manual_ps_pub.h  mcu_ps_pub.h  net_param_pub.h  power_save_pub.h  rw_pub.h  tx_evm_pub.h  wlan_cli_pub.h  wlan_defs_pub.h  wlan_ui_pub.h
ql_kernel/func/joint_up/: role_launch.h
ql_kernel/func/lwip_intf/: tcp_server.c
ql_kernel/func/lwip_intf/lwip-2.0.2/port/: lwip_netif_address.h  lwipopts.h
ql_kernel/func/lwip_intf/lwip-2.0.2/port/arch/: cc.h
ql_kernel/func/lwip_intf/lwip-2.0.2/src/apps/httpd/: custom_fsdata.c  fsdata.c
ql_kernel/func/lwip_intf/lwip-2.0.2/src/apps/httpd/fs/: connect_succes.html  not_connect.html
ql_kernel/func/lwip_intf/lwip-2.0.2/src/apps/snmp/: snmpv3_mbedtls.c
ql_kernel/func/lwip_intf/lwip-2.0.2/src/include/lwip/: api.h  debug.h  def.h  err.h  etharp.h  ip6_addr.h  ip_addr.h  lwip_arch.h  mem.h  netdb.h  netif.h  opt.h  sio.h
ql_kernel/func/lwip_intf/lwip-2.0.2/src/include/lwip/apps/: httpd_opts.h
ql_kernel/func/lwip_intf/lwip-2.0.2/src/include/lwip/priv/: api_msg.h
ql_kernel/func/lwip_intf/lwip-2.0.2/src/include/lwip/prot/: dns.h  etharp.h  ethernet.h  icmp.h  icmp6.h  igmp.h  ip.h  ip4.h  ip6.h  mld6.h  nd6.h  tcp.h  udp.h
ql_kernel/func/lwip_intf/lwip-2.0.2/test/unit/tcp/: tcp_helper.h
ql_kernel/func/misc/: flash_bypass.h
ql_kernel/func/power_save/: low_voltage_compensation.h  low_voltage_ps.h  mcu_ps.h  power_save.h
ql_kernel/func/rwnx_intf/: rw_ieee80211.h  rw_msdu.h  rw_tx_buffering.h  rwnx_defs.h
ql_kernel/func/saradc_intf/: saradc_intf.h
ql_kernel/func/temp_detect/: temp_detect_pub.h
ql_kernel/func/uart_debug/: cmd_evm.h  uart_debug.mk
ql_kernel/func/user_driver/: BkDriverFlash.h  BkDriverTimer.h  BkDriverUart.h
ql_kernel/func/video_transfer/: video_transfer.h
ql_kernel/func/wolfssl/src/: ssl.c
ql_kernel/func/wolfssl/wolfcrypt/src/: logging.c  random.c
ql_kernel/func/wolfssl/wolfssl/: options.h
ql_kernel/func/wolfssl/wolfssl/wolfcrypt/: settings.h  wc_port.h
ql_kernel/func/wpa_supplicant_2_9/: SConscript  wpa_supplicant_2_9.mk
ql_kernel/func/wpa_supplicant_2_9/bk_patch/: fake_socket.h
ql_kernel/func/wpa_supplicant_2_9/src/ap/: ap_config.h  hostapd.h  sta_info.h  wps_hostapd.h
ql_kernel/func/wpa_supplicant_2_9/src/common/: ieee802_11_defs.h  wpa_ctrl.h  wpa_psk_cache.h
ql_kernel/func/wpa_supplicant_2_9/src/crypto/: crypto.h
ql_kernel/func/wpa_supplicant_2_9/src/drivers/: driver_beken.h
ql_kernel/func/wpa_supplicant_2_9/src/p2p/: p2p_i.h
ql_kernel/func/wpa_supplicant_2_9/src/utils/: build_config.h  common.h  eloop.h  list.h  xfile.h
ql_kernel/func/wpa_supplicant_2_9/wpa_supplicant/: config.h  config_ssid.h  wpa_supplicant_i.h
ql_kernel/os/: CMakeLists.txt
ql_kernel/os/FreeRTOSv9.0.0/: CMakeLists.txt
ql_kernel/os/FreeRTOSv9.0.0/Source/include/: portable.h  queue.h  task.h  timers.h
ql_kernel/os/include/: FreeRTOSConfig.h  rtos_pub.h  sys_rtos.h
(+110 files in other folders)
